--- a/pagina/contac.html
+++ b/pagina/contac.html
@@ -18,6 +18,25 @@
             </ul>
         </nav>
     </header>
-    
+    <main class="courses">
+        <p>
+            En academia de Música DO-RE-MI creemos en el poder de la musica 
+        </p>
+        <p>
+            puedes encontrarnos ubicados en Alemeda Juan Pablo 11, Colonia el Renacimiento, Local #2 San Salvador.
+
+        </p>
+        <img src="../imagenes/mapa.png" alt="Ubicacion de academia de música DO-RE-MI" class="imagen">
+    </main>
+     <footer>
+        
+           <p> &copy; 2024 Academia de Música DO-RE-MI. todos los derechos reservados. <br></p>
+            <p> siguenos en nuestras redes sociales para estar al dia con eventos y ofertas especiales.
+        </p>
+    </footer>
+    <br><br>
+    <h2>medios de contacto:</h2>
+    <li><i>telefono</i>2273-6000</li>
+    <li><i>correo electronico:</i>doremi@gmail.com</li>
 </body>
 </html>
